--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@commitlint/cli": "^17.4.3",
     "@commitlint/config-conventional": "^17.4.3",
     "@tsconfig/node18-strictest-esm": "^1.0.1",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
     "@types/pino": "^7.0.5",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
