--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "scripts": {
     "start": "NODE_ENV=production node dist/index.js",
-    "develop:debug": "nodemon --inspect=0.0.0.0 src/index.ts",
-    "develop": "nodemon src/index.ts",
+    "develop:debug": "nodemon --inspect=0.0.0.0 src/index.ts | pino-pretty",
+    "develop": "nodemon src/index.ts | pino-pretty",
     "build": "tsc -p .",
     "clean": "rm -rf dist",
     "test": "jest",
@@ -33,6 +33,7 @@
     "@commitlint/config-conventional": "^17.4.3",
     "@tsconfig/node18-strictest-esm": "^1.0.1",
     "@types/jest": "^29.4.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.13.0",
     "@types/pino": "^7.0.5",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
@@ -44,6 +45,7 @@
     "jest": "^29.4.3",
     "lint-staged": "^13.1.2",
     "nodemon": "^2.0.20",
+    "pino-pretty": "^9.3.0",
     "prettier": "^2.8.4",
     "prettier-eslint": "^15.0.1",
     "ts-jest": "^29.0.5",
@@ -52,6 +54,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.8",
+    "mongoose": "^6.9.2",
     "pino": "^8.10.0"
   }
 }
