--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "centrifuge-influx",
   "version": "0.1.0",
-  "license": "LGPL-2.1",
+  "license": "LGPL-3.0",
   "nodemonConfig": {
     "verbose": true,
     "ignore": [
@@ -34,9 +34,7 @@
     "@commitlint/config-conventional": "^17.4.3",
     "@tsconfig/node18-strictest-esm": "^1.0.1",
     "@types/jest": "^29.4.0",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.13.0",
-    "@types/pino": "^7.0.5",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "eslint": "^8.34.0",
@@ -55,7 +53,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.8",
+    "axios": "^1.3.3",
+    "dotenv": "^16.0.3",
     "mongoose": "^6.9.2",
     "pino": "^8.10.0"
   }
