--- a/package.json
+++ b/package.json
@@ -53,9 +53,12 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@centrifuge/centrifuge-js": "^0.4.1",
     "axios": "^1.3.3",
+    "bottleneck": "^2.19.5",
     "dotenv": "^16.0.3",
     "mongoose": "^6.9.2",
-    "pino": "^8.10.0"
+    "pino": "^8.10.0",
+    "rxjs": "^7.8.0"
   }
 }
