use outflux dockerfile instead

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -36,7 +36,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
+      - name: Pull Dockerfile
+        run: |
+          curl -sSL https://raw.githubusercontent.com/embrio-tech/centrifuge-influx/main/Dockerfile > Dockerfile
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
