--- a/package.json
+++ b/package.json
@@ -50,13 +50,15 @@
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
-    "typescript": "^4.9.5"
+    "typescript": "^5.4.4"
   },
   "dependencies": {
-    "@centrifuge/centrifuge-js": "^0.5.0",
+    "@centrifuge/centrifuge-js": "^0.8.0",
+    "@polkadot/keyring": "^11.1.3",
     "axios": "^1.3.3",
     "bottleneck": "^2.19.5",
     "dotenv": "^16.0.3",
+    "fastify": "^4.26.2",
     "mongoose": "^6.9.2",
     "pino": "^8.10.0",
     "rxjs": "^7.8.0"
